--- a/ssn-server/packages/ssn-adapters/package.json
+++ b/ssn-server/packages/ssn-adapters/package.json
@@ -11,10 +11,12 @@
     "@rmlio/rmlmapper-java-wrapper": "^1.0.0",
     "@rmlio/yarrrml-parser": "^1.0.2",
     "cron": "^1.8.2",
-    "n3": "^1.3.5"
+    "n3": "^1.3.5",
+    "ssn-domain": "^1.0.0"
   },
   "devDependencies": {
     "ava": "^3.5.2",
-    "nock": "^12.0.3"
+    "nock": "^12.0.3",
+    "sinon": "^9.0.1"
   }
 }
