--- a/ssn-server/packages/ssn-adapters/package.json
+++ b/ssn-server/packages/ssn-adapters/package.json
@@ -11,6 +11,7 @@
     "@rmlio/rmlmapper-java-wrapper": "^1.0.0",
     "@rmlio/yarrrml-parser": "^1.0.2",
     "cron": "^1.8.2",
+    "functional-red-black-tree": "^1.0.1",
     "n3": "^1.3.5",
     "ssn-domain": "^1.0.0"
   },
