--- a/ssn-server/packages/ssn-example-parkings-gent/package.json
+++ b/ssn-server/packages/ssn-example-parkings-gent/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "n3": "^1.3.5",
     "restify": "^8.5.1",
-    "ssn-adapters": "^1.0.0",
-    "ssn-domain": "^1.0.0"
+    "@ssn/adapters": "^1.0.0",
+    "@ssn/domain": "^1.0.0"
   }
 }
