--- a/ssn-server/packages/ssn-adapters/package.json
+++ b/ssn-server/packages/ssn-adapters/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "ssn-adapters",
-  "private": true,
+  "name": "@ssn/adapters",
   "version": "1.0.0",
   "main": "./index.js",
   "type": "module",
@@ -13,7 +12,7 @@
     "cron": "^1.8.2",
     "functional-red-black-tree": "^1.0.1",
     "n3": "^1.3.5",
-    "ssn-domain": "^1.0.0"
+    "@ssn/domain": "^1.0.0"
   },
   "devDependencies": {
     "ava": "^3.5.2",
