--- a/ssn-server/packages/ssn-domain/package.json
+++ b/ssn-server/packages/ssn-domain/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "@ssn/domain",
+  "name": "@ssn/core",
   "version": "1.0.0",
   "main": "./index.js",
   "type": "module",
   "dependencies": {
-    "ava": "^3.5.2",
+    "@rmlio/rmlmapper-java-wrapper": "^1.0.0",
+    "@rmlio/yarrrml-parser": "^1.1.0",
+    "cron": "^1.8.2",
+    "functional-red-black-tree": "^1.0.1",
     "n3": "^1.3.5"
+  },
+  "devDependencies": {
+    "ava": "^3.5.2",
+    "nock": "^12.0.3",
+    "sinon": "^9.0.1"
   },
   "scripts": {
     "test": "ava"
