--- a/ssn-server/packages/ssn-adapters/package.json
+++ b/ssn-server/packages/ssn-adapters/package.json
@@ -12,7 +12,7 @@
     "cron": "^1.8.2",
     "functional-red-black-tree": "^1.0.1",
     "n3": "^1.3.5",
-    "@ssn/domain": "^1.0.0"
+    "@ssn/core": "^1.0.0"
   },
   "devDependencies": {
     "ava": "^3.5.2",
