--- a/ssn-server/packages/ssn-example-parkings-gent/package.json
+++ b/ssn-server/packages/ssn-example-parkings-gent/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "@ssn/core": "^1.0.0",
     "n3": "^1.3.5",
-    "restify": "^8.5.1",
-    "@ssn/adapters": "^1.0.0",
-    "@ssn/domain": "^1.0.0"
+    "restify": "^8.5.1"
   }
 }
