--- a/ssn-server/packages/ssn-core/package.json
+++ b/ssn-server/packages/ssn-core/package.json
@@ -8,7 +8,8 @@
     "@rmlio/yarrrml-parser": "^1.1.0",
     "cron": "^1.8.2",
     "functional-red-black-tree": "^1.0.1",
-    "n3": "^1.3.5"
+    "n3": "^1.3.5",
+    "restify": "^8.5.1"
   },
   "devDependencies": {
     "ava": "^3.5.2",
