--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "matrix-profile-service/seriesdistancematrix"]
 	path = matrix-profile-service/seriesdistancematrix
-	url = git@github.com:IDLabResearch/seriesdistancematrix.git
+	url = https://github.com/IDLabResearch/seriesdistancematrix.git
