--- a/ssn-server/packages/ssn-example-parkings-gent/package.json
+++ b/ssn-server/packages/ssn-example-parkings-gent/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "dependencies": {
     "@ssn/core": "^1.0.0",
+    "@ssn/matrix-profile-interface": "^1.0.0",
     "n3": "^1.3.5",
     "restify": "^8.5.1"
   }
