--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@reach/router": "^1.3.3",
     "highcharts": "^8.0.1",
     "highcharts-react-official": "^3.0.0",
+    "lazy-collections": "^0.7.1",
+    "ldfetch": "^1.1.2",
     "n3": "^1.3.5",
     "purgecss": "^2.1.0",
     "rdf-literal": "^1.1.0",
-    "rdflib": "^1.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
@@ -43,6 +44,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(lazy-collections)/)"
     ]
   }
 }
