--- a/ssn-server/packages/ssn-example-parkings-gent/package.json
+++ b/ssn-server/packages/ssn-example-parkings-gent/package.json
@@ -9,5 +9,8 @@
     "@ssn/matrix-profile-interface": "^1.0.0",
     "n3": "^1.3.5",
     "restify": "^8.5.1"
+  },
+  "scripts": {
+    "deploy": "forever start -a -l ./logs.log -o ./out.log -e ./error.log index.js"
   }
 }
