--- a/ssn-server/packages/ssn-core/package.json
+++ b/ssn-server/packages/ssn-core/package.json
@@ -9,7 +9,8 @@
     "cron": "^1.8.2",
     "functional-red-black-tree": "^1.0.1",
     "n3": "^1.3.5",
-    "restify": "^8.5.1"
+    "restify": "^8.5.1",
+    "timeseries-tree": "^1.0.0"
   },
   "devDependencies": {
     "ava": "^3.5.2",
