--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.1",
-    "@testing-library/user-event": "^10.0.0"
+    "@testing-library/user-event": "^10.0.0",
+    "nock": "^12.0.3"
   },
   "scripts": {
     "test": "react-scripts test",
