--- a/web-demo/package.json
+++ b/web-demo/package.json
@@ -8,7 +8,7 @@
     "highcharts": "^8.0.1",
     "highcharts-react-official": "^3.0.0",
     "lazy-collections": "^0.7.1",
-    "ldfetch": "^1.1.2",
+    "ldfetch": "https://github.com/pietercolpaert/ldfetch.git",
     "n3": "^1.3.5",
     "purgecss": "^2.1.0",
     "rdf-literal": "^1.1.0",
