--- a/ssn-server/packages/ssn-example-load-data/package.json
+++ b/ssn-server/packages/ssn-example-load-data/package.json
@@ -5,9 +5,10 @@
   "main": "./index.js",
   "type": "module",
   "dependencies": {
-    "@zeit/fetch-retry": "^5.0.0",
     "@ssn/core": "^1.0.0",
     "@ssn/matrix-profile-interface": "^1.0.0",
-    "n3": "^1.3.5"
+    "@zeit/fetch-retry": "^5.0.0",
+    "n3": "^1.3.5",
+    "node-fetch": "^2.6.0"
   }
 }
