--- a/ssn-server/packages/ssn-example-web-demo/package.json
+++ b/ssn-server/packages/ssn-example-web-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ssn-example-parkings-gent",
+  "name": "ssn-example-web-demo",
   "private": true,
   "version": "1.0.0",
   "main": "index.js",
