--- a/ssn-server/packages/append-only-bplus-tree/package.json
+++ b/ssn-server/packages/append-only-bplus-tree/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "timeseries-tree",
+  "name": "append-only-bplus-tree",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
