--- a/ssn-server/packages/ssn-core/package.json
+++ b/ssn-server/packages/ssn-core/package.json
@@ -10,7 +10,7 @@
     "functional-red-black-tree": "^1.0.1",
     "n3": "^1.3.5",
     "restify": "^8.5.1",
-    "timeseries-tree": "^1.0.0"
+    "append-only-bplus-tree": "^1.0.0"
   },
   "devDependencies": {
     "ava": "^3.5.2",
